# photo-webbed-memory

./: .gitignore  Cargo.toml  License.md  acquisition_prospectus.md  readme.md  whitepaper.md
bitdrop_v2/: Cargo.toml  benchmark_results.json  ftree.txt  run_bench.py
bitdrop_v2/benches/: bitdrop_bench.rs
bitdrop_v2/src/: bdnf.rs  blocks.rs  cluster.rs  collapse.rs  container.rs  encode.rs  engine.rs  lib.rs  librarian.rs  metrics.rs  pattern_library.rs  predictor.rs  quant.rs  semantic.rs  transform.rs  turbovec.rs
bitdrop_v2/src/bitdrop/: binary.rs  mod.rs
bitdrop_v2/src/gpu/: backend.rs  merge_score.wgsl  mod.rs  wgpu_backend.rs
bitdrop_v2/src/model/: global.rs
bitdrop_v2/src/pymid/: decode.rs  dictionary.rs  encode.rs  mod.rs  model.rs  structbin.rs  tokenizer.rs
crates/core/: Cargo.toml
crates/core/src/: decay.rs  edge.rs  engine.rs  graph.rs  heatmap.rs  lib.rs  memory_authentication.rs  memory_cognition.rs  memory_index.rs  memory_linking.rs  memory_lock_north_star.rs  memory_predictor.rs  memory_reuse.rs  muscle_memory.rs  node.rs  photonic.rs  reflex.rs  scratchpad.rs  semantic_scene.rs  word_hive.rs
